added notebooks with computations of eigenvalues via UFL, and application in Ogden material model

--- a/02_hyperelasticity-NeoHook.ipynb
+++ b/02_hyperelasticity-NeoHook.ipynb
@@ -19,7 +19,7 @@
     "# Path settings\n",
     "import os\n",
     "# we use a relative path here, you can also specify an absolute path for your system\n",
-    "out_path = \"output/01_hyperelasticity\"\n",
+    "out_path = \"output/01_hyperelasticity_neohook\"\n",
     "os.makedirs(out_path, exist_ok=True)"
    ]
   },
@@ -103,7 +103,7 @@
     "\n",
     "#-- c) compute surface load over buondary\n",
     "dsp    = fe.Measure('ds', domain=mesh, subdomain_data=boundaries)\n",
-    "load_s = fe.Constant((100., 0., 0.))\n",
+    "load_s = fe.Constant((10., 0., 0.))\n",
     "# term in variational form\n",
     "integral_S = fe.inner(load_s, u) * dsp(1)\n",
     "\n",
@@ -140,6 +140,7 @@
     "    \"\"\"\n",
     "    mu    = Ey / (2.*(1+nu))\n",
     "    lmbda = Ey*nu / ((1+nu)*(1-2*nu))\n",
+    "    print(mu, lmbda)\n",
     "    C = F.T*F      # Right Cauchy-Green tensor\n",
     "    I1 = fe.tr(C)  # Invariants \n",
     "    J = fe.det(F)\n",
@@ -277,6 +278,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cauchy Green Tensor\n",
+    "\n",
+    "F = defGrad(u)\n",
+    "C = F.T*F      # Right Cauchy-Green tensor\n",
+    "\n",
+    "cauchy_green = fe.project(C, Z)\n",
+    "cauchy_green.rename(\"cauchy_green\", \"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Computation of van Mises Stress\n",
     "s = S - (1./3) * fe.tr(S) * fe.Identity(u.geometric_dimension())\n",
     "von_Mises = fe.sqrt( 3./2 * fe.inner(s, s) )\n",
@@ -303,6 +319,8 @@
     "xdmffile.write(S_project,0)\n",
     "xdmffile.write(von_Mises_project,0)\n",
     "xdmffile.write(u,0)\n",
+    "xdmffile.write(cauchy_green,0)\n",
+    "\n",
     "\n",
     "xdmffile.close()"
    ]
