--- a/04_hyperelasticity-Ogden.ipynb
+++ b/04_hyperelasticity-Ogden.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "import fenics as fe\n",
-    "import os"
+    "import os\n",
+    "fe.parameters[\"form_compiler\"][\"representation\"] = \"uflacs\""
    ]
   },
   {
@@ -104,7 +105,7 @@
     "\n",
     "#-- c) compute surface load over buondary\n",
     "dsp    = fe.Measure('ds', domain=mesh, subdomain_data=boundaries)\n",
-    "load_s = fe.Constant((100., 0., 0.))\n",
+    "load_s = fe.Constant((0.00005, 0., 0.))\n",
     "# term in variational form\n",
     "integral_S = fe.inner(load_s, u) * dsp(1)\n",
     "\n",
@@ -177,8 +178,24 @@
     "    C = F.T*F      # Right Cauchy-Green tensor\n",
     "    I1 = fe.tr(C)  # Invariants \n",
     "    J = fe.det(F)\n",
-    "    #return (mu/2)*(I1 - 3) - mu*fe.ln(J) + (lmbda/2)*(fe.ln(J))**2\n",
-    "    return (mu/2)*(I1 - 3) # this formulation *should* be identical to the Ogden model with alpha=2\n"
+    "    return (mu/2)*(I1 - 3) - mu*fe.ln(J) #+ (lmbda/2)*(fe.ln(J))**2\n",
+    "    #return (mu/2)*(I1 - 3) # this formulation *should* be identical to the Ogden model with alpha=2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ey = 1000 \n",
+    "nu = 0.40\n",
+    "\n",
+    "\n",
+    "mu    = Ey / (2.*(1+nu))\n",
+    "lmbda = Ey*nu / ((1+nu)*(1-2*nu))\n",
+    "\n",
+    "print(mu, lmbda)"
    ]
   },
   {
@@ -194,9 +211,9 @@
     "F = fe.variable(F) # !!! needed to be able to differentiate strain energydensity function wrt F for stress computation\n",
     "\n",
     "# instantiate strain energy density function for given material properties\n",
-    "psi = strainEnergyDensityFunctionOgden(F=F, mu=360, alpha=2)\n",
+    "#psi = strainEnergyDensityFunctionOgden(F=F, mu=360, alpha=2)\n",
     "\n",
-    "#psi = strainEnergyDensityFunctionNeoHookean(F=F, mu=360, lmbda=1400)\n",
+    "psi = strainEnergyDensityFunctionNeoHookean(F=F, mu=mu*1E-6, lmbda=lmbda*1E-6)\n",
     "\n",
     "\n",
     "# body force\n",
@@ -229,10 +246,10 @@
    "source": [
     "# need non-zero starting values for displacement field\n",
     "# if zero displacement field -> C=id -> v_inv=0 -> division by 0 in phi_inv\n",
-    "n = u.vector().get_local().shape\n",
-    "import numpy as np\n",
-    "u_noise_np = np.random.rand(n[0])\n",
-    "u.vector().set_local(u_noise_np)"
+    "# n = u.vector().get_local().shape\n",
+    "# import numpy as np\n",
+    "# u_noise_np = np.random.rand(n[0])\n",
+    "# u.vector().set_local(u_noise_np)"
    ]
   },
   {
@@ -248,25 +265,25 @@
     "# Set solver parameters (optional)\n",
     "prm = solver.parameters\n",
     "prm['nonlinear_solver'] = 'newton'\n",
-    "prm['newton_solver']['linear_solver'] = 'cg'\n",
-    "prm['newton_solver']['preconditioner'] = 'icc'\n",
+    "prm['newton_solver']['linear_solver'] = 'mumps'\n",
+    "# prm['newton_solver']['preconditioner'] = 'icc'\n",
     "\n",
-    "prm['newton_solver']['error_on_nonconvergence'] = True\n",
-    "prm['newton_solver']['absolute_tolerance'] = 1E-9\n",
-    "prm['newton_solver']['relative_tolerance'] = 1E-8\n",
-    "prm['newton_solver']['maximum_iterations'] = 50\n",
-    "prm['newton_solver']['relaxation_parameter'] = 1.0\n",
+    "# prm['newton_solver']['error_on_nonconvergence'] = True\n",
+    "# prm['newton_solver']['absolute_tolerance'] = 1E-9\n",
+    "# prm['newton_solver']['relative_tolerance'] = 1E-8\n",
+    "# prm['newton_solver']['maximum_iterations'] = 50\n",
+    "# prm['newton_solver']['relaxation_parameter'] = 1.0\n",
     "\n",
-    "prm['newton_solver']['lu_solver']['report'] = True\n",
-    "#prm['newton_solver']['lu_solver']['reuse_factorization'] = False\n",
-    "#prm['newton_solver']['lu_solver']['same_nonzero_pattern'] = False\n",
-    "prm['newton_solver']['lu_solver']['symmetric'] = False\n",
+    "# prm['newton_solver']['lu_solver']['report'] = True\n",
+    "# #prm['newton_solver']['lu_solver']['reuse_factorization'] = False\n",
+    "# #prm['newton_solver']['lu_solver']['same_nonzero_pattern'] = False\n",
+    "# prm['newton_solver']['lu_solver']['symmetric'] = False\n",
     "\n",
-    "prm['newton_solver']['krylov_solver']['error_on_nonconvergence'] = True\n",
-    "prm['newton_solver']['krylov_solver']['absolute_tolerance'] = 1E-7\n",
-    "prm['newton_solver']['krylov_solver']['relative_tolerance'] = 1E-5\n",
-    "prm['newton_solver']['krylov_solver']['maximum_iterations'] = 1000\n",
-    "prm['newton_solver']['krylov_solver']['nonzero_initial_guess'] = True\n",
+    "# prm['newton_solver']['krylov_solver']['error_on_nonconvergence'] = True\n",
+    "# prm['newton_solver']['krylov_solver']['absolute_tolerance'] = 1E-7\n",
+    "# prm['newton_solver']['krylov_solver']['relative_tolerance'] = 1E-5\n",
+    "# prm['newton_solver']['krylov_solver']['maximum_iterations'] = 1000\n",
+    "# prm['newton_solver']['krylov_solver']['nonzero_initial_guess'] = True\n",
     "\n",
     "solver.solve()"
    ]
@@ -355,10 +372,10 @@
     "    eval_field.rename(\"lambda_%i\"%i, \"\")\n",
     "    evals_ufl.append(eval_field)\n",
     "    \n",
-    "    evec_i = eigen_vector(C_sol, i)\n",
-    "    evec_field = fe.project(evec_i, X, solver_type='cg', preconditioner_type='icc')\n",
-    "    evec_field.rename(\"ev_%i\"%i, \"\")\n",
-    "    evecs_ufl.append(evec_field)\n"
+    "#     evec_i = eigen_vector(C_sol, i)\n",
+    "#     evec_field = fe.project(evec_i, X, solver_type='cg', preconditioner_type='icc')\n",
+    "#     evec_field.rename(\"ev_%i\"%i, \"\")\n",
+    "#     evecs_ufl.append(evec_field)\n"
    ]
   },
   {
@@ -382,7 +399,7 @@
     "\n",
     "\n",
     "for i in range(0,3):\n",
-    "    xdmffile.write(evecs_ufl[i],0)\n",
+    "    #xdmffile.write(evecs_ufl[i],0)\n",
     "    xdmffile.write(evals_ufl[i],0)\n",
     "\n",
     "xdmffile.close()"
