--- a/04_hyperelasticity-Ogden.ipynb
+++ b/04_hyperelasticity-Ogden.ipynb
@@ -30,7 +30,13 @@
     "# Hyperelasticity Ogden Model\n",
     "\n",
     "Solves a simple mechanical problem with Ogden hyperelastic material model.\n",
-    "The strain-energy density function is expressed in terms of the stretch ratios $\\lambda_i$ which are computed as the eigenvalues of the Right Cauchy-Green tensor using the approach outlined in notebook [03_computing_eigenvalues_ufl.ipynb](https://github.com/danielabler/femII_fenics_2019/03_computing_eigenvalues_ufl.ipynb) in this repository. "
+    "The strain-energy density function is expressed in terms of the stretch ratios $\\lambda_i$ which are computed as the eigenvalues of the Right Cauchy-Green tensor using the approach outlined in notebook [03_computing_eigenvalues_ufl.ipynb](https://github.com/danielabler/femII_fenics_2019/03_computing_eigenvalues_ufl.ipynb) in this repository. \n",
+    "\n",
+    "NOTE:\n",
+    "---\n",
+    "- For identical parameter settings (mu, lambda=2) both formulations, using stretch ratios [ogden] vs trace [neohookean]) should be identical\n",
+    "- BUT 'one-term' Ogden without compression penalty requires additional constraint (p) to be solved correctly\n",
+    "- **therefore not yet working** .... TODO ...."
    ]
   },
   {
@@ -178,8 +184,9 @@
     "    C = F.T*F      # Right Cauchy-Green tensor\n",
     "    I1 = fe.tr(C)  # Invariants \n",
     "    J = fe.det(F)\n",
-    "    return (mu/2)*(I1 - 3) - mu*fe.ln(J) #+ (lmbda/2)*(fe.ln(J))**2\n",
-    "    #return (mu/2)*(I1 - 3) # this formulation *should* be identical to the Ogden model with alpha=2\n"
+    "    return (mu/2)*(I1 - 3) - mu*fe.ln(J) + (lmbda/2)*(fe.ln(J))**2\n",
+    "    #return (mu/2)*(I1 - 3) # this formulation *should* be identical to the Ogden model with alpha=2\n",
+    "    \n"
    ]
   },
   {
@@ -211,7 +218,7 @@
     "F = fe.variable(F) # !!! needed to be able to differentiate strain energydensity function wrt F for stress computation\n",
     "\n",
     "# instantiate strain energy density function for given material properties\n",
-    "#psi = strainEnergyDensityFunctionOgden(F=F, mu=360, alpha=2)\n",
+    "psi = strainEnergyDensityFunctionOgden(F=F, mu=360, alpha=2)\n",
     "\n",
     "psi = strainEnergyDensityFunctionNeoHookean(F=F, mu=mu*1E-6, lmbda=lmbda*1E-6)\n",
     "\n",
@@ -384,7 +391,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a more compact way of writing all results into the same file:\n",
     "\n",
     "xdmffile = fe.XDMFFile(os.path.join(out_path, 'results.xdmf'))\n",
     "xdmffile.parameters[\"flush_output\"] = True\n",
@@ -408,11 +414,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "NOTE:\n",
-    "- For identical parameter settings (mu, lambda=2) both formulations (using stretch ratios [ogden] vs trace [neohookean]) seem to give the same results\n",
-    "- test this by changing the strain density function used for computation; make sure to restart the kernel between tests."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
